--- a/CPP_Module_01/ex03/Makefile
+++ b/CPP_Module_01/ex03/Makefile
@@ -4,13 +4,15 @@ OBJS	= $(SRCS:.cpp=.o)
 
 NAME	= Violence
 
+HEADER	= HumanA.hpp HumanB.hpp Weapon.hpp
+
 CXX		= c++
 FLAGS	= -Wall -Wextra -Werror -std=c++98
 RM		= rm -rf
 
 all:		$(NAME)
 
-$(NAME):	$(OBJS)
+$(NAME):	$(OBJS) $(HEADER)
 		$(CXX) $(OBJS) -o $(NAME)
 
 %.o:		%.cpp Makefile
